# movie-recommendation

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_database.py  test_interface.py  test_movie.py  test_recommender.py
